--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Dependencies
 node_modules
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build output
 dist
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode
-.idea
+.env
+*.local
+.vercel
