--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,19 @@
 {
   "version": 2,
-  "installCommand": "cd backend && npm install && cd ../frontend && npm install",
-  "buildCommand": "cd backend && npm run build && cd ../frontend && npm run build",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "cd server && npm install && npm run build && cd ../client && npm install && npm run build",
+  "outputDirectory": "client/dist",
   "functions": {
     "api/index.js": {
-      "includeFiles": ["backend/dist/**", "backend/node_modules/**"]
+      "includeFiles": [
+        "server/dist/**",
+        "server/node_modules/**"
+      ]
     }
   },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.js" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    }
   ]
 }
