--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,7 @@
   "outputDirectory": "client/dist",
   "functions": {
     "api/index.js": {
-      "includeFiles": [
-        "server/dist/**",
-        "server/node_modules/**"
-      ]
+      "includeFiles": "server/**"
     }
   },
   "rewrites": [
