--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/main.ts",
-      "use": "@vercel/node"
+      "src": "backend/package.json",
+      "use": "@vercel/node",
+      "config": { "distDir": "dist" }
     },
     {
       "src": "frontend/package.json",
@@ -14,7 +15,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/src/main.ts"
+      "dest": "dist/main"
     },
     {
       "src": "/(.*)",
