--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "backend"
   ],
   "scripts": {
-    "build": "cd backend && npm install && npm run build && cd ../frontend && npm install && npm run build"
+    "build": "npm run build -w backend && npm run build -w frontend"
   }
 }
