Add Supabase environment variables to Vercel configuration

--- a/server/package.json
+++ b/server/package.json
@@ -4,23 +4,23 @@
     "description": "NestJS backend for the Guestbook app",
     "private": true,
     "scripts": {
-        "build": "nest build",
+        "build": "node node_modules/@nestjs/cli/bin/nest.js build",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:prod": "node dist/main"
     },
     "dependencies": {
+        "@nestjs/cli": "^11.0.0",
         "@nestjs/common": "^11.0.0",
         "@nestjs/core": "^11.0.0",
         "@nestjs/platform-express": "^11.0.0",
         "@supabase/supabase-js": "^2.49.0",
         "dotenv": "^16.4.0",
         "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.0"
+        "rxjs": "^7.8.0",
+        "typescript": "^5.7.0"
     },
     "devDependencies": {
-        "@nestjs/cli": "^11.0.0",
-        "typescript": "^5.7.0",
         "@types/node": "^22.0.0",
         "@types/express": "^5.0.0"
     }
